java/decaf_PA1A/src/decaf/frontend/Parser.output
   0  $accept : Program $end

   1  Program : ClassList

   2  ClassList : ClassList ClassDef
   3            | ClassDef

   4  VariableDef : Variable ';'

   5  Variable : Type IDENTIFIER

   6  Type : INT
   7       | VOID
   8       | BOOL
   9       | STRING
  10       | CLASS IDENTIFIER
  11       | Type '[' ']'

  12  ClassDef : SEALED CLASS IDENTIFIER ExtendsClause '{' FieldList '}'
  13           | CLASS IDENTIFIER ExtendsClause '{' FieldList '}'

  14  ExtendsClause : EXTENDS IDENTIFIER
  15                |

  16  FieldList : FieldList VariableDef
  17            | FieldList FunctionDef
  18            |

  19  Formals : VariableList
  20          |

  21  VariableList : VariableList ',' Variable
  22               | Variable

  23  FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock
  24              | Type IDENTIFIER '(' Formals ')' StmtBlock

  25  StmtBlock : '{' StmtList '}'

  26  StmtList : StmtList Stmt
  27           |

  28  Stmt : VariableDef
  29       | SimpleStmt ';'
  30       | IfStmt
  31       | WhileStmt
  32       | ForStmt
  33       | ReturnStmt ';'
  34       | PrintStmt ';'
  35       | BreakStmt ';'
  36       | OCStmt ';'
  37       | GuardedStmt
  38       | ForeachStmt
  39       | StmtBlock

  40  OCStmt : SCOPY '(' IDENTIFIER ',' Expr ')'

  41  GuardedStmt : IF '{' GuardList Guard '}'
  42              | IF '{' '}'

  43  GuardList : GuardList Guard SEP
  44            |

  45  Guard : Expr ':' Stmt

  46  SimpleStmt : LValue '=' Expr
  47             | Call
  48             |

  49  Receiver : Expr '.'
  50           |

  51  LValue : Receiver IDENTIFIER
  52         | Expr '[' Expr ']'
  53         | AutoVariable

  54  AutoVariable : VAR IDENTIFIER

  55  Call : Receiver IDENTIFIER '(' Actuals ')'

  56  Expr : LValue
  57       | Call
  58       | Constant
  59       | Expr '+' Expr
  60       | Expr '-' Expr
  61       | Expr '*' Expr
  62       | Expr '/' Expr
  63       | Expr '%' Expr
  64       | Expr EQUAL Expr
  65       | Expr NOT_EQUAL Expr
  66       | Expr '<' Expr
  67       | Expr '>' Expr
  68       | Expr LESS_EQUAL Expr
  69       | Expr GREATER_EQUAL Expr
  70       | Expr AND Expr
  71       | Expr OR Expr
  72       | '(' Expr ')'
  73       | '-' Expr
  74       | '!' Expr
  75       | READ_INTEGER '(' ')'
  76       | READ_LINE '(' ')'
  77       | THIS
  78       | NEW IDENTIFIER '(' ')'
  79       | NEW Type '[' Expr ']'
  80       | INSTANCEOF '(' Expr ',' IDENTIFIER ')'
  81       | '(' CLASS IDENTIFIER ')' Expr
  82       | Expr INIT Expr
  83       | Expr CONCAT Expr
  84       | Expr '[' Expr ':' Expr ']'
  85       | Expr '[' Expr ']' DEFAULT Expr
  86       | '[' Expr FOR IDENTIFIER IN Expr IF Expr ']'
  87       | '[' Expr FOR IDENTIFIER IN Expr ']'

  88  Constant : LITERAL
  89           | ArrayConstant
  90           | NULL

  91  ArrayConstant : '[' ConstantList ']'
  92                | '[' ']'

  93  ConstantList : ConstantList ',' Constant
  94               | Constant

  95  Actuals : ExprList
  96          |

  97  ExprList : ExprList ',' Expr
  98           | Expr

  99  WhileStmt : WHILE '(' Expr ')' Stmt

 100  ForStmt : FOR '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt

 101  ForeachStmt : FOREACH '(' BoundVariable IN Expr WHILE Expr ')' Stmt
 102              | FOREACH '(' BoundVariable IN Expr ')' Stmt

 103  BoundVariable : Variable
 104                | AutoVariable

 105  BreakStmt : BREAK

 106  IfStmt : IF '(' Expr ')' Stmt ElseClause

 107  ElseClause : ELSE Stmt
 108             |

 109  ReturnStmt : RETURN Expr
 110             | RETURN

 111  PrintStmt : PRINT '(' ExprList ')'

state 0
	$accept : . Program $end  (0)

	CLASS  shift 1
	SEALED  shift 2
	.  error

	Program  goto 3
	ClassList  goto 4
	ClassDef  goto 5


state 1
	ClassDef : CLASS . IDENTIFIER ExtendsClause '{' FieldList '}'  (13)

	IDENTIFIER  shift 6
	.  error


state 2
	ClassDef : SEALED . CLASS IDENTIFIER ExtendsClause '{' FieldList '}'  (12)

	CLASS  shift 7
	.  error


state 3
	$accept : Program . $end  (0)

	$end  accept


state 4
	Program : ClassList .  (1)
	ClassList : ClassList . ClassDef  (2)

	CLASS  shift 1
	SEALED  shift 2
	$end  reduce 1

	ClassDef  goto 8


state 5
	ClassList : ClassDef .  (3)

	.  reduce 3


state 6
	ClassDef : CLASS IDENTIFIER . ExtendsClause '{' FieldList '}'  (13)
	ExtendsClause : .  (15)

	EXTENDS  shift 9
	'{'  reduce 15

	ExtendsClause  goto 10


state 7
	ClassDef : SEALED CLASS . IDENTIFIER ExtendsClause '{' FieldList '}'  (12)

	IDENTIFIER  shift 11
	.  error


state 8
	ClassList : ClassList ClassDef .  (2)

	.  reduce 2


state 9
	ExtendsClause : EXTENDS . IDENTIFIER  (14)

	IDENTIFIER  shift 12
	.  error


state 10
	ClassDef : CLASS IDENTIFIER ExtendsClause . '{' FieldList '}'  (13)

	'{'  shift 13
	.  error


state 11
	ClassDef : SEALED CLASS IDENTIFIER . ExtendsClause '{' FieldList '}'  (12)
	ExtendsClause : .  (15)

	EXTENDS  shift 9
	'{'  reduce 15

	ExtendsClause  goto 14


state 12
	ExtendsClause : EXTENDS IDENTIFIER .  (14)

	.  reduce 14


state 13
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' . FieldList '}'  (13)
	FieldList : .  (18)

	.  reduce 18

	FieldList  goto 15


state 14
	ClassDef : SEALED CLASS IDENTIFIER ExtendsClause . '{' FieldList '}'  (12)

	'{'  shift 16
	.  error


state 15
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList . '}'  (13)
	FieldList : FieldList . VariableDef  (16)
	FieldList : FieldList . FunctionDef  (17)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	STATIC  shift 22
	'}'  shift 23
	.  error

	VariableDef  goto 24
	Variable  goto 25
	Type  goto 26
	FunctionDef  goto 27


state 16
	ClassDef : SEALED CLASS IDENTIFIER ExtendsClause '{' . FieldList '}'  (12)
	FieldList : .  (18)

	.  reduce 18

	FieldList  goto 28


state 17
	Type : VOID .  (7)

	.  reduce 7


state 18
	Type : BOOL .  (8)

	.  reduce 8


state 19
	Type : INT .  (6)

	.  reduce 6


state 20
	Type : STRING .  (9)

	.  reduce 9


state 21
	Type : CLASS . IDENTIFIER  (10)

	IDENTIFIER  shift 29
	.  error


state 22
	FunctionDef : STATIC . Type IDENTIFIER '(' Formals ')' StmtBlock  (23)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	.  error

	Type  goto 30


state 23
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}' .  (13)

	.  reduce 13


state 24
	FieldList : FieldList VariableDef .  (16)

	.  reduce 16


state 25
	VariableDef : Variable . ';'  (4)

	';'  shift 31
	.  error


state 26
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (11)
	FunctionDef : Type . IDENTIFIER '(' Formals ')' StmtBlock  (24)

	IDENTIFIER  shift 32
	'['  shift 33
	.  error


state 27
	FieldList : FieldList FunctionDef .  (17)

	.  reduce 17


state 28
	ClassDef : SEALED CLASS IDENTIFIER ExtendsClause '{' FieldList . '}'  (12)
	FieldList : FieldList . VariableDef  (16)
	FieldList : FieldList . FunctionDef  (17)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	STATIC  shift 22
	'}'  shift 34
	.  error

	VariableDef  goto 24
	Variable  goto 25
	Type  goto 26
	FunctionDef  goto 27


state 29
	Type : CLASS IDENTIFIER .  (10)

	.  reduce 10


state 30
	Type : Type . '[' ']'  (11)
	FunctionDef : STATIC Type . IDENTIFIER '(' Formals ')' StmtBlock  (23)

	IDENTIFIER  shift 35
	'['  shift 33
	.  error


state 31
	VariableDef : Variable ';' .  (4)

	.  reduce 4


state 32
	Variable : Type IDENTIFIER .  (5)
	FunctionDef : Type IDENTIFIER . '(' Formals ')' StmtBlock  (24)

	'('  shift 36
	';'  reduce 5


state 33
	Type : Type '[' . ']'  (11)

	']'  shift 37
	.  error


state 34
	ClassDef : SEALED CLASS IDENTIFIER ExtendsClause '{' FieldList '}' .  (12)

	.  reduce 12


state 35
	FunctionDef : STATIC Type IDENTIFIER . '(' Formals ')' StmtBlock  (23)

	'('  shift 38
	.  error


state 36
	FunctionDef : Type IDENTIFIER '(' . Formals ')' StmtBlock  (24)
	Formals : .  (20)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	')'  reduce 20

	Variable  goto 39
	Type  goto 40
	Formals  goto 41
	VariableList  goto 42


state 37
	Type : Type '[' ']' .  (11)

	.  reduce 11


state 38
	FunctionDef : STATIC Type IDENTIFIER '(' . Formals ')' StmtBlock  (23)
	Formals : .  (20)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	')'  reduce 20

	Variable  goto 39
	Type  goto 40
	Formals  goto 43
	VariableList  goto 42


state 39
	VariableList : Variable .  (22)

	.  reduce 22


state 40
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (11)

	IDENTIFIER  shift 44
	'['  shift 33
	.  error


state 41
	FunctionDef : Type IDENTIFIER '(' Formals . ')' StmtBlock  (24)

	')'  shift 45
	.  error


state 42
	Formals : VariableList .  (19)
	VariableList : VariableList . ',' Variable  (21)

	','  shift 46
	')'  reduce 19


state 43
	FunctionDef : STATIC Type IDENTIFIER '(' Formals . ')' StmtBlock  (23)

	')'  shift 47
	.  error


state 44
	Variable : Type IDENTIFIER .  (5)

	.  reduce 5


state 45
	FunctionDef : Type IDENTIFIER '(' Formals ')' . StmtBlock  (24)

	'{'  shift 48
	.  error

	StmtBlock  goto 49


state 46
	VariableList : VariableList ',' . Variable  (21)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	.  error

	Variable  goto 50
	Type  goto 40


state 47
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' . StmtBlock  (23)

	'{'  shift 48
	.  error

	StmtBlock  goto 51


state 48
	StmtBlock : '{' . StmtList '}'  (25)
	StmtList : .  (27)

	.  reduce 27

	StmtList  goto 52


state 49
	FunctionDef : Type IDENTIFIER '(' Formals ')' StmtBlock .  (24)

	.  reduce 24


state 50
	VariableList : VariableList ',' Variable .  (21)

	.  reduce 21


state 51
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock .  (23)

	.  reduce 23


state 52
	StmtBlock : '{' StmtList . '}'  (25)
	StmtList : StmtList . Stmt  (26)
	SimpleStmt : .  (48)
	Receiver : .  (50)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	NULL  shift 53
	THIS  shift 54
	WHILE  shift 55
	FOR  shift 56
	IF  shift 57
	RETURN  shift 58
	BREAK  shift 59
	NEW  shift 60
	PRINT  shift 61
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	'['  shift 69
	'{'  shift 48
	'}'  shift 70
	SCOPY  shift 71
	VAR  shift 72
	FOREACH  shift 73
	IDENTIFIER  reduce 50
	';'  reduce 48

	VariableDef  goto 74
	Variable  goto 25
	Type  goto 40
	StmtBlock  goto 75
	Stmt  goto 76
	SimpleStmt  goto 77
	IfStmt  goto 78
	WhileStmt  goto 79
	ForStmt  goto 80
	ReturnStmt  goto 81
	PrintStmt  goto 82
	BreakStmt  goto 83
	OCStmt  goto 84
	GuardedStmt  goto 85
	ForeachStmt  goto 86
	Expr  goto 87
	LValue  goto 88
	Call  goto 89
	Receiver  goto 90
	AutoVariable  goto 91
	Constant  goto 92
	ArrayConstant  goto 93


state 53
	Constant : NULL .  (90)

	.  reduce 90


state 54
	Expr : THIS .  (77)

	.  reduce 77


state 55
	WhileStmt : WHILE . '(' Expr ')' Stmt  (99)

	'('  shift 94
	.  error


state 56
	ForStmt : FOR . '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt  (100)

	'('  shift 95
	.  error


state 57
	GuardedStmt : IF . '{' GuardList Guard '}'  (41)
	GuardedStmt : IF . '{' '}'  (42)
	IfStmt : IF . '(' Expr ')' Stmt ElseClause  (106)

	'('  shift 96
	'{'  shift 97
	.  error


state 58
	ReturnStmt : RETURN . Expr  (109)
	ReturnStmt : RETURN .  (110)
	Receiver : .  (50)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	'['  shift 69
	VAR  shift 72
	IDENTIFIER  reduce 50
	';'  reduce 110

	Expr  goto 98
	LValue  goto 99
	Call  goto 100
	Receiver  goto 90
	AutoVariable  goto 91
	Constant  goto 92
	ArrayConstant  goto 93


state 59
	BreakStmt : BREAK .  (105)

	.  reduce 105


state 60
	Expr : NEW . IDENTIFIER '(' ')'  (78)
	Expr : NEW . Type '[' Expr ']'  (79)

	VOID  shift 17
	BOOL  shift 18
	INT  shift 19
	STRING  shift 20
	CLASS  shift 21
	IDENTIFIER  shift 101
	.  error

	Type  goto 102


state 61
	PrintStmt : PRINT . '(' ExprList ')'  (111)

	'('  shift 103
	.  error


state 62
	Expr : READ_INTEGER . '(' ')'  (75)

	'('  shift 104
	.  error


state 63
	Expr : READ_LINE . '(' ')'  (76)

	'('  shift 105
	.  error


state 64
	Constant : LITERAL .  (88)

	.  reduce 88


state 65
	Expr : INSTANCEOF . '(' Expr ',' IDENTIFIER ')'  (80)

	'('  shift 106
	.  error


state 66
	Expr : '-' . Expr  (73)
	Receiver : .  (50)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	'['  shift 69
	VAR  shift 72
	IDENTIFIER  reduce 50

	Expr  goto 107
	LValue  goto 99
	Call  goto 100
	Receiver  goto 90
	AutoVariable  goto 91
	Constant  goto 92
	ArrayConstant  goto 93


state 67
	Expr : '!' . Expr  (74)
	Receiver : .  (50)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	'['  shift 69
	VAR  shift 72
	IDENTIFIER  reduce 50

	Expr  goto 108
	LValue  goto 99
	Call  goto 100
	Receiver  goto 90
	AutoVariable  goto 91
	Constant  goto 92
	ArrayConstant  goto 93


state 68
	Expr : '(' . Expr ')'  (72)
	Expr : '(' . CLASS IDENTIFIER ')' Expr  (81)
	Receiver : .  (50)

	CLASS  shift 109
	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	'['  shift 69
	VAR  shift 72
	IDENTIFIER  reduce 50

	Expr  goto 110
	LValue  goto 99
	Call  goto 100
	Receiver  goto 90
	AutoVariable  goto 91
	Constant  goto 92
	ArrayConstant  goto 93


state 69
	Expr : '[' . Expr FOR IDENTIFIER IN Expr IF Expr ']'  (86)
	Expr : '[' . Expr FOR IDENTIFIER IN Expr ']'  (87)
	ArrayConstant : '[' . ConstantList ']'  (91)
	ArrayConstant : '[' . ']'  (92)
	Receiver : .  (50)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	'['  shift 69
	']'  shift 111
	VAR  shift 72
	IDENTIFIER  reduce 50

	Expr  goto 112
	LValue  goto 99
	Call  goto 100
	Receiver  goto 90
	AutoVariable  goto 91
	Constant  goto 113
	ArrayConstant  goto 93
	ConstantList  goto 114


state 70
	StmtBlock : '{' StmtList '}' .  (25)

	.  reduce 25


state 71
	OCStmt : SCOPY . '(' IDENTIFIER ',' Expr ')'  (40)

	'('  shift 115
	.  error


state 72
	AutoVariable : VAR . IDENTIFIER  (54)

	IDENTIFIER  shift 116
	.  error


state 73
	ForeachStmt : FOREACH . '(' BoundVariable IN Expr WHILE Expr ')' Stmt  (101)
	ForeachStmt : FOREACH . '(' BoundVariable IN Expr ')' Stmt  (102)

	'('  shift 117
	.  error


state 74
	Stmt : VariableDef .  (28)

	.  reduce 28


state 75
	Stmt : StmtBlock .  (39)

	.  reduce 39


state 76
	StmtList : StmtList Stmt .  (26)

	.  reduce 26


state 77
	Stmt : SimpleStmt . ';'  (29)

	';'  shift 118
	.  error


state 78
	Stmt : IfStmt .  (30)

	.  reduce 30


state 79
	Stmt : WhileStmt .  (31)

	.  reduce 31


state 80
	Stmt : ForStmt .  (32)

	.  reduce 32


state 81
	Stmt : ReturnStmt . ';'  (33)

	';'  shift 119
	.  error


state 82
	Stmt : PrintStmt . ';'  (34)

	';'  shift 120
	.  error


state 83
	Stmt : BreakStmt . ';'  (35)

	';'  shift 121
	.  error


state 84
	Stmt : OCStmt . ';'  (36)

	';'  shift 122
	.  error


state 85
	Stmt : GuardedStmt .  (37)

	.  reduce 37


state 86
	Stmt : ForeachStmt .  (38)

	.  reduce 38


state 87
	Receiver : Expr . '.'  (49)
	LValue : Expr . '[' Expr ']'  (52)
	Expr : Expr . '+' Expr  (59)
	Expr : Expr . '-' Expr  (60)
	Expr : Expr . '*' Expr  (61)
	Expr : Expr . '/' Expr  (62)
	Expr : Expr . '%' Expr  (63)
	Expr : Expr . EQUAL Expr  (64)
	Expr : Expr . NOT_EQUAL Expr  (65)
	Expr : Expr . '<' Expr  (66)
	Expr : Expr . '>' Expr  (67)
	Expr : Expr . LESS_EQUAL Expr  (68)
	Expr : Expr . GREATER_EQUAL Expr  (69)
	Expr : Expr . AND Expr  (70)
	Expr : Expr . OR Expr  (71)
	Expr : Expr . INIT Expr  (82)
	Expr : Expr . CONCAT Expr  (83)
	Expr : Expr . '[' Expr ':' Expr ']'  (84)
	Expr : Expr . '[' Expr ']' DEFAULT Expr  (85)

	AND  shift 123
	OR  shift 124
	LESS_EQUAL  shift 125
	GREATER_EQUAL  shift 126
	EQUAL  shift 127
	NOT_EQUAL  shift 128
	'+'  shift 129
	'-'  shift 130
	'*'  shift 131
	'/'  shift 132
	'%'  shift 133
	'>'  shift 134
	'<'  shift 135
	'.'  shift 136
	'['  shift 137
	INIT  shift 138
	CONCAT  shift 139
	.  error


state 88
	SimpleStmt : LValue . '=' Expr  (46)
	Expr : LValue .  (56)

	'='  shift 140
	AND  reduce 56
	OR  reduce 56
	LESS_EQUAL  reduce 56
	GREATER_EQUAL  reduce 56
	EQUAL  reduce 56
	NOT_EQUAL  reduce 56
	'+'  reduce 56
	'-'  reduce 56
	'*'  reduce 56
	'/'  reduce 56
	'%'  reduce 56
	'>'  reduce 56
	'<'  reduce 56
	'.'  reduce 56
	'['  reduce 56
	INIT  reduce 56
	CONCAT  reduce 56


state 89
	SimpleStmt : Call .  (47)
	Expr : Call .  (57)

	AND  reduce 57
	OR  reduce 57
	LESS_EQUAL  reduce 57
	GREATER_EQUAL  reduce 57
	EQUAL  reduce 57
	NOT_EQUAL  reduce 57
	'+'  reduce 57
	'-'  reduce 57
	'*'  reduce 57
	'/'  reduce 57
	'%'  reduce 57
	'>'  reduce 57
	'<'  reduce 57
	'.'  reduce 57
	';'  reduce 47
	')'  reduce 47
	'['  reduce 57
	INIT  reduce 57
	CONCAT  reduce 57


state 90
	LValue : Receiver . IDENTIFIER  (51)
	Call : Receiver . IDENTIFIER '(' Actuals ')'  (55)

	IDENTIFIER  shift 141
	.  error


state 91
	LValue : AutoVariable .  (53)

	.  reduce 53


state 92
	Expr : Constant .  (58)

	.  reduce 58


state 93
	Constant : ArrayConstant .  (89)

	.  reduce 89


state 94
	WhileStmt : WHILE '(' . Expr ')' Stmt  (99)
	Receiver : .  (50)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	'['  shift 69
	VAR  shift 72
	IDENTIFIER  reduce 50

	Expr  goto 142
	LValue  goto 99
	Call  goto 100
	Receiver  goto 90
	AutoVariable  goto 91
	Constant  goto 92
	ArrayConstant  goto 93


state 95
	ForStmt : FOR '(' . SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt  (100)
	SimpleStmt : .  (48)
	Receiver : .  (50)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	'['  shift 69
	VAR  shift 72
	IDENTIFIER  reduce 50
	';'  reduce 48

	SimpleStmt  goto 143
	Expr  goto 87
	LValue  goto 88
	Call  goto 89
	Receiver  goto 90
	AutoVariable  goto 91
	Constant  goto 92
	ArrayConstant  goto 93


state 96
	IfStmt : IF '(' . Expr ')' Stmt ElseClause  (106)
	Receiver : .  (50)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	'['  shift 69
	VAR  shift 72
	IDENTIFIER  reduce 50

	Expr  goto 144
	LValue  goto 99
	Call  goto 100
	Receiver  goto 90
	AutoVariable  goto 91
	Constant  goto 92
	ArrayConstant  goto 93


state 97
	GuardedStmt : IF '{' . GuardList Guard '}'  (41)
	GuardedStmt : IF '{' . '}'  (42)
	GuardList : .  (44)

	'}'  shift 145
	NULL  reduce 44
	THIS  reduce 44
	NEW  reduce 44
	READ_INTEGER  reduce 44
	READ_LINE  reduce 44
	LITERAL  reduce 44
	IDENTIFIER  reduce 44
	INSTANCEOF  reduce 44
	'-'  reduce 44
	'!'  reduce 44
	'('  reduce 44
	'['  reduce 44
	VAR  reduce 44

	GuardList  goto 146


state 98
	Receiver : Expr . '.'  (49)
	LValue : Expr . '[' Expr ']'  (52)
	Expr : Expr . '+' Expr  (59)
	Expr : Expr . '-' Expr  (60)
	Expr : Expr . '*' Expr  (61)
	Expr : Expr . '/' Expr  (62)
	Expr : Expr . '%' Expr  (63)
	Expr : Expr . EQUAL Expr  (64)
	Expr : Expr . NOT_EQUAL Expr  (65)
	Expr : Expr . '<' Expr  (66)
	Expr : Expr . '>' Expr  (67)
	Expr : Expr . LESS_EQUAL Expr  (68)
	Expr : Expr . GREATER_EQUAL Expr  (69)
	Expr : Expr . AND Expr  (70)
	Expr : Expr . OR Expr  (71)
	Expr : Expr . INIT Expr  (82)
	Expr : Expr . CONCAT Expr  (83)
	Expr : Expr . '[' Expr ':' Expr ']'  (84)
	Expr : Expr . '[' Expr ']' DEFAULT Expr  (85)
	ReturnStmt : RETURN Expr .  (109)

	AND  shift 123
	OR  shift 124
	LESS_EQUAL  shift 125
	GREATER_EQUAL  shift 126
	EQUAL  shift 127
	NOT_EQUAL  shift 128
	'+'  shift 129
	'-'  shift 130
	'*'  shift 131
	'/'  shift 132
	'%'  shift 133
	'>'  shift 134
	'<'  shift 135
	'.'  shift 136
	'['  shift 137
	INIT  shift 138
	CONCAT  shift 139
	';'  reduce 109


state 99
	Expr : LValue .  (56)

	.  reduce 56


state 100
	Expr : Call .  (57)

	.  reduce 57


state 101
	Expr : NEW IDENTIFIER . '(' ')'  (78)

	'('  shift 147
	.  error


state 102
	Type : Type . '[' ']'  (11)
	Expr : NEW Type . '[' Expr ']'  (79)

	'['  shift 148
	.  error


state 103
	PrintStmt : PRINT '(' . ExprList ')'  (111)
	Receiver : .  (50)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	'['  shift 69
	VAR  shift 72
	IDENTIFIER  reduce 50

	Expr  goto 149
	LValue  goto 99
	Call  goto 100
	Receiver  goto 90
	AutoVariable  goto 91
	Constant  goto 92
	ArrayConstant  goto 93
	ExprList  goto 150


state 104
	Expr : READ_INTEGER '(' . ')'  (75)

	')'  shift 151
	.  error


state 105
	Expr : READ_LINE '(' . ')'  (76)

	')'  shift 152
	.  error


state 106
	Expr : INSTANCEOF '(' . Expr ',' IDENTIFIER ')'  (80)
	Receiver : .  (50)

	NULL  shift 53
	THIS  shift 54
	NEW  shift 60
	READ_INTEGER  shift 62
	READ_LINE  shift 63
	LITERAL  shift 64
	INSTANCEOF  shift 65
	'-'  shift 66
	'!'  shift 67
	'('  shift 68
	'['  shift 69
	VAR  shift 72
	IDENTIFIER  reduce 50

	Expr  goto 153
	LValue  goto 99
	Call  goto 100
	Receiver  goto 90
	AutoVariable  goto 91
	Constant  goto 92
	ArrayConstant  goto 93


state 107
	Receiver : Expr . '.'  (49)
	LValue : Expr . '[' Expr ']'  (52)
	Expr : Expr . '+' Expr  (59)
	Expr : Expr . '-' Expr  (60)
	Expr : Expr . '*' Expr  (61)
	Expr : Expr . '/' Expr  (62)
	Expr : Expr . '%' Expr  (63)
	Expr : Expr . EQUAL Expr  (64)
	Expr : Expr . NOT_EQUAL Expr  (65)
	Expr : Expr . '<' Expr  (66)
	Expr : Expr . '>' Expr  (67)
	Expr : Expr . LESS_EQUAL Expr  (68)
	Expr : Expr . GREATER_EQUAL Expr  (69)
	Expr : Expr . AND Expr  (70)
	Expr : Expr . OR Expr  (71)
	Expr : '-' Expr .  (73)
	Expr : Expr . INIT Expr  (82)
	Expr : Expr . CONCAT Expr  (83)
	Expr : Expr . '[' Expr ':' Expr ']'  (84)
	Expr : Expr . '[' Expr ']' DEFAULT Expr  (85)

	'.'  shift 136
	'['  shift 137
	WHILE  reduce 73
	FOR  reduce 73
	IF  reduce 73
	AND  reduce 73
	OR  reduce 73
	LESS_EQUAL  reduce 73
	GREATER_EQUAL  reduce 73
	EQUAL  reduce 73
	NOT_EQUAL  reduce 73
	'+'  reduce 73
	'-'  reduce 73
	'*'  reduce 73
	'/'  reduce 73
	'%'  reduce 73
	'>'  reduce 73
	'<'  reduce 73
	','  reduce 73
	';'  reduce 73
	')'  reduce 73
	']'  reduce 73
	':'  reduce 73
	INIT  reduce 73
	CONCAT  reduce 73


state 108
	Receiver : Expr . '.'  (49)
	LValue : Expr . '[' Expr ']'  (52)
	Expr : Expr . '+' Expr  (59)
	Expr : Expr . '-' Expr  (60)
	Expr : Expr . '*' Expr  (61)
	Expr : Expr . '/' Expr  (62)
	Expr : Expr . '%' Expr  (63)
	Expr : Expr . EQUAL Expr  (64)
	Expr : Expr . NOT_EQUAL Expr  (65)
	Expr : Expr . '<' Expr  (66)
	Expr : Expr . '>' Expr  (67)
	Expr : Expr . LESS_EQUAL Expr  (68)
	Expr : Expr . GREATER_EQUAL Expr  (69)
	Expr : Expr . AND Expr  (70)
	Expr : Expr . OR Expr  (71)
	Expr : '!' Expr .  (74)
	Expr : Expr . INIT Expr  (82)
	Expr : Expr . CONCAT Expr  (83)
	Expr : Expr . '[' Expr ':' Expr ']'  (84)
	Expr : Expr . '[' Expr ']' DEFAULT Expr  (85)

	'.'  shift 136
	'['  shift 137
	WHILE  reduce 74
	FOR  reduce 74
	IF  reduce 74
	AND  reduce 74
	OR  reduce 74
	LESS_EQUAL  reduce 74
	GREATER_EQUAL  reduce 74
	EQUAL  reduce 74
	NOT_EQUAL  reduce 74
	'+'  reduce 74
	'-'  reduce 74
	'*'  reduce 74
	'/'  reduce 74
	'%'  reduce 74
	'>'  reduce 74
	'<'  reduce 74
	','  reduce 74
	';'  reduce 74
	')'  reduce 74
	']'  reduce 74
	':'  reduce 74
	INIT  reduce 74
	CONCAT  reduce 74


state 109
